第二篇 跳出价值陷阱

--- a/ch3/PBROEch3.ipynb
+++ b/ch3/PBROEch3.ipynb
@@ -2642,7 +2642,7 @@
     "# 收益率和基准文件\n",
     "RETURNS_FILE = DATA_PATH / 'TRDNEW_Mnth.csv'\n",
     "BENCHMARK_FILE = DATA_PATH / 'benchmark_indices.csv'\n",
-    "\n",
+    "OUTPUT_FILE = 'E:\\PBROE\\ch3'\n",
     "# --- 策略参数配置 ---\n",
     "# 定义要回测的持有期（单位：月）\n",
     "HORIZONS = [1, 2, 3, 6, 9, 12]\n",
