第四章 完工

--- a/ch3/PBROEch3.ipynb
+++ b/ch3/PBROEch3.ipynb
@@ -507,7 +507,7 @@
     "\n",
     "# --- 输出文件配置 ---\n",
     "OUTPUT_DIR = Path(r'E:\\PBROE\\ch3')\n",
-    "OUTPUT_FILENAME = 'pbroe3.1.csv'\n",
+    "OUTPUT_FILENAME = 'pbroe3.1Residuals.csv'\n",
     "OUTPUT_DIR.mkdir(parents=True, exist_ok=True) # 确保输出目录存在\n",
     "\n",
     "\n",
