第四章 第五章策略回测

--- a/ch3/PBROEch3.ipynb
+++ b/ch3/PBROEch3.ipynb
@@ -432,8 +432,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-20T08:40:22.918936Z",
-     "start_time": "2025-07-20T08:40:13.421134Z"
+     "end_time": "2025-07-22T14:59:37.842025Z",
+     "start_time": "2025-07-22T14:59:28.141045Z"
     }
    },
    "cell_type": "code",
@@ -454,7 +454,7 @@
     "schema_name = 'pbroe'\n",
     "\n",
     "# 定义日期范围\n",
-    "start_date = '2009-04'\n",
+    "start_date = '2006-04'\n",
     "end_date = '2025-03'\n",
     "\n",
     "# 构建连接字符串\n",
@@ -481,7 +481,7 @@
    ],
    "id": "f5ed22239ba1cb6",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -489,8 +489,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-20T08:40:59.589620Z",
-     "start_time": "2025-07-20T08:40:24.550915Z"
+     "end_time": "2025-07-22T15:00:27.687814Z",
+     "start_time": "2025-07-22T14:59:46.468590Z"
     }
    },
    "source": [
@@ -628,14 +628,14 @@
      "output_type": "stream",
      "text": [
       "--- 步骤 1: 数据清洗与预处理 ---\n",
-      "数据清洗后，剩余 537077 条有效记录用于回归分析。\n",
+      "数据清洗后，剩余 579276 条有效记录用于回归分析。\n",
       "\n",
       "--- 步骤 2: 执行月度行业内回归与残差计算 ---\n",
-      "回归与残差计算完成，共得到 513741 条有效记录。\n",
+      "回归与残差计算完成，共得到 551604 条有效记录。\n",
       "\n",
       "--- 步骤 3: 格式化并保存最终数据文件 ---\n",
       "\n",
-      "策略数据已成功生成并保存为 'E:\\PBROE\\ch3\\pbroe3.1.csv'。\n",
+      "策略数据已成功生成并保存为 'E:\\PBROE\\ch3\\pbroe3.1Residuals.csv'。\n",
       "该文件包含了所有股票的标准化残差，可用于后续不同阈值的组合构建。\n",
       "\n",
       "文件预览（按残差升序排列）：\n"
@@ -645,18 +645,18 @@
      "data": {
       "text/plain": [
        "             调入日期   stkcd shortname           indnme1    ROEttm        PB  \\\n",
-       "486325 2024-10-01  000413      东旭光电  计算机、通信和其他电子设备制造业 -0.071403  0.096286   \n",
-       "482022 2024-09-01  000413      东旭光电  计算机、通信和其他电子设备制造业 -0.077396  0.096286   \n",
-       "471594 2024-07-01  600277      亿利洁能      化学原料和化学制品制造业 -0.035919  0.071005   \n",
-       "477759 2024-08-01  000413      东旭光电  计算机、通信和其他电子设备制造业 -0.077396  0.158742   \n",
-       "495480 2024-12-01  689009      九号公司  计算机、通信和其他电子设备制造业  0.206565  0.520048   \n",
+       "524188 2024-10-01  000413      东旭光电  计算机、通信和其他电子设备制造业 -0.071403  0.096286   \n",
+       "519885 2024-09-01  000413      东旭光电  计算机、通信和其他电子设备制造业 -0.077396  0.096286   \n",
+       "509457 2024-07-01  600277      亿利洁能      化学原料和化学制品制造业 -0.035919  0.071005   \n",
+       "515622 2024-08-01  000413      东旭光电  计算机、通信和其他电子设备制造业 -0.077396  0.158742   \n",
+       "533343 2024-12-01  689009      九号公司  计算机、通信和其他电子设备制造业  0.206565  0.520048   \n",
        "\n",
        "        residual_zscore  \n",
-       "486325        -6.024607  \n",
-       "482022        -5.483283  \n",
-       "471594        -5.005612  \n",
-       "477759        -4.561665  \n",
-       "495480        -4.234704  "
+       "524188        -6.024607  \n",
+       "519885        -5.483283  \n",
+       "509457        -5.005612  \n",
+       "515622        -4.561665  \n",
+       "533343        -4.234704  "
       ],
       "text/html": [
        "<div>\n",
@@ -688,7 +688,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>486325</th>\n",
+       "      <th>524188</th>\n",
        "      <td>2024-10-01</td>\n",
        "      <td>000413</td>\n",
        "      <td>东旭光电</td>\n",
@@ -698,7 +698,7 @@
        "      <td>-6.024607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>482022</th>\n",
+       "      <th>519885</th>\n",
        "      <td>2024-09-01</td>\n",
        "      <td>000413</td>\n",
        "      <td>东旭光电</td>\n",
@@ -708,7 +708,7 @@
        "      <td>-5.483283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>471594</th>\n",
+       "      <th>509457</th>\n",
        "      <td>2024-07-01</td>\n",
        "      <td>600277</td>\n",
        "      <td>亿利洁能</td>\n",
@@ -718,7 +718,7 @@
        "      <td>-5.005612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>477759</th>\n",
+       "      <th>515622</th>\n",
        "      <td>2024-08-01</td>\n",
        "      <td>000413</td>\n",
        "      <td>东旭光电</td>\n",
@@ -728,7 +728,7 @@
        "      <td>-4.561665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>495480</th>\n",
+       "      <th>533343</th>\n",
        "      <td>2024-12-01</td>\n",
        "      <td>689009</td>\n",
        "      <td>九号公司</td>\n",
@@ -746,7 +746,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 11
+   "execution_count": 2
   },
   {
    "metadata": {
