--- a/ch5/PBROEch5.ipynb
+++ b/ch5/PBROEch5.ipynb
@@ -2,22 +2,281 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-07-22T13:28:03.816462Z",
+     "start_time": "2025-07-22T13:28:03.808363Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import matplotlib.pyplot as plt\n",
+    "def get_academic_colors():\n",
+    "    \"\"\"返回您指定的学术风格色板\"\"\"\n",
+    "    return {\n",
+    "        'primary': '#333333',\n",
+    "        'secondary': '#000000',\n",
+    "        'background': '#F0F0F0',\n",
+    "        'gridline': '#D9D9D9',\n",
+    "        'categorical': [\n",
+    "            '#FF8C00',  # 明亮橙色\n",
+    "            '#6A7FDB',  # 明亮靛蓝\n",
+    "            '#52BCA3',  # 浅青绿\n",
+    "            '#A0522D',  # 深红棕色\n",
+    "            '#DA70D6',  # 明亮兰花紫\n",
+    "            '#87CEEB',  # 天蓝色\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "def set_academic_style():\n",
+    "    \"\"\"设置图表的全局学术风格\"\"\"\n",
+    "    colors = get_academic_colors()\n",
+    "    plt.style.use('seaborn-v0_8-paper')\n",
+    "    # --- 核心修正：提供一个备选字体列表，以增强兼容性 ---\n",
+    "    plt.rcParams['font.sans-serif'] = ['SimHei', 'Heiti TC', 'Microsoft JhengHei', 'Arial Unicode MS']\n",
+    "    plt.rcParams['axes.unicode_minus'] = False\n",
+    "    plt.rcParams['figure.facecolor'] = colors['background']\n",
+    "    plt.rcParams['axes.facecolor'] = colors['background']\n",
+    "    plt.rcParams['text.color'] = colors['primary']\n",
+    "    plt.rcParams['axes.labelcolor'] = colors['primary']\n",
+    "    plt.rcParams['xtick.color'] = colors['secondary']\n",
+    "    plt.rcParams['ytick.color'] = colors['secondary']\n",
+    "    plt.rcParams['grid.color'] = colors['gridline']\n",
+    "    # --- 核心修改：再次增大全局基础字号 ---\n",
+    "    plt.rcParams['font.size'] = 22"
+   ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-22T15:04:34.904188Z",
+     "start_time": "2025-07-22T15:04:08.003428Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 残差分位数加速计算\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "from joblib import Parallel, delayed # 导入用于并行计算的库\n",
+    "import os # 导入os库以获取CPU核心数量\n",
+    "\n",
+    "# =================================================================== #\n",
+    "#                       【1. 文件路径配置与模拟数据生成】             #\n",
+    "# =================================================================== #\n",
+    "\n",
+    "# 请根据您的实际文件路径修改以下变量。\n",
+    "# 如果文件不存在，代码将自动创建模拟数据以确保可运行性。\n",
+    "RESIDUALS_FILE_3_1 = Path('E:/PBROE/ch3/pbroe3.1Residuals.csv')\n",
+    "RESIDUALS_FILE_4_1 = Path('E:/PBROE/ch4/pbroe4.1Residuals.csv')\n",
+    "\n",
+    "# 输出目录设置为当前目录，如您所要求\n",
+    "OUTPUT_DIR = Path('.')\n",
+    "OUTPUT_DIR.mkdir(exist_ok=True) # 确保输出目录存在\n",
+    "\n",
+    "# --- 为演示目的创建模拟残差数据文件 ---\n",
+    "# 在实际应用中，您将使用真实数据。如果您的真实文件已存在，此函数将不会执行创建操作。\n",
+    "def create_dummy_residuals_file(file_path, residual_col_name, num_stocks=200, num_months=120):\n",
+    "    \"\"\"\n",
+    "    创建模拟残差数据文件。\n",
+    "    参数:\n",
+    "        file_path (Path): 要创建的模拟文件的路径。\n",
+    "        residual_col_name (str): 残差列的名称 ('residual_zscore' 或 'residual_zscore_adj')。\n",
+    "        num_stocks (int): 模拟的股票数量。\n",
+    "        num_months (int): 模拟的月份数量。\n",
+    "    \"\"\"\n",
+    "    if not file_path.exists():\n",
+    "        print(f\"检测到文件 '{file_path}' 不存在，正在创建模拟数据...\")\n",
+    "        all_data = []\n",
+    "        start_date = pd.to_datetime('2010-01-31')\n",
+    "        for i in range(num_stocks):\n",
+    "            stkcd = str(600000 + i).zfill(6) # 模拟A股代码格式\n",
+    "            dates = pd.date_range(start=start_date, periods=num_months, freq='M')\n",
+    "            # 模拟残差值，使其具有一定的序列相关性，更接近真实数据分布\n",
+    "            residuals = np.random.randn(num_months).cumsum() / 5 + np.random.randn(num_months) * 0.2\n",
+    "            df_stock = pd.DataFrame({\n",
+    "                '调入日期': dates,\n",
+    "                'stkcd': stkcd,\n",
+    "                residual_col_name: residuals,\n",
+    "                'shortname': f'模拟公司{stkcd}',\n",
+    "                'indnme1': '模拟行业'\n",
+    "            })\n",
+    "            all_data.append(df_stock)\n",
+    "        pd.concat(all_data).to_csv(file_path, index=False)\n",
+    "        print(f\"模拟文件 '{file_path}' 创建成功。\")\n",
+    "\n",
+    "# 调用函数创建模拟文件（如果不存在）\n",
+    "create_dummy_residuals_file(RESIDUALS_FILE_3_1, 'residual_zscore')\n",
+    "create_dummy_residuals_file(RESIDUALS_FILE_4_1, 'residual_zscore_adj')\n",
+    "\n",
+    "# =================================================================== #\n",
+    "#                           【2. 数据加载与预处理】                   #\n",
+    "# =================================================================== #\n",
+    "\n",
+    "def load_and_preprocess_residuals(file_path):\n",
+    "    \"\"\"\n",
+    "    加载残差数据并进行预处理。\n",
+    "    参数:\n",
+    "        file_path (Path): 残差数据文件的路径。\n",
+    "    返回:\n",
+    "        pd.DataFrame: 加载并预处理后的DataFrame。\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        df['stkcd'] = df['stkcd'].astype(str).str.zfill(6)\n",
+    "        df['调入日期'] = pd.to_datetime(df['调入日期'])\n",
+    "        # 确保数据按股票代码和日期排序，这对于时序计算至关重要\n",
+    "        df = df.sort_values(by=['stkcd', '调入日期']).reset_index(drop=True)\n",
+    "        print(f\"文件 '{file_path}' 加载成功，共 {len(df)} 条记录。\")\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"错误：未找到文件 '{file_path}'。请确保文件路径正确。\")\n",
+    "        return pd.DataFrame()\n",
+    "\n",
+    "df_residuals_3_1 = load_and_preprocess_residuals(RESIDUALS_FILE_3_1)\n",
+    "df_residuals_4_1 = load_and_preprocess_residuals(RESIDUALS_FILE_4_1)\n",
+    "\n",
+    "# =================================================================== #\n",
+    "#                       【3. 时序残差分位数计算（并行版本）】         #\n",
+    "# =================================================================== #\n",
+    "\n",
+    "def calculate_quantiles_for_single_stock(stock_df, residual_col, periods):\n",
+    "    \"\"\"\n",
+    "    辅助函数：计算单个股票数据的时序残差分位数。\n",
+    "    此函数将在并行处理中被调用。\n",
+    "    参数:\n",
+    "        stock_df (pd.DataFrame): 单个股票的残差数据。\n",
+    "        residual_col (str): 残差列的名称。\n",
+    "        periods (list): 需要计算分位数的历史周期列表。\n",
+    "    返回:\n",
+    "        pd.DataFrame: 包含新增时序分位数列的单个股票DataFrame。\n",
+    "    \"\"\"\n",
+    "    # 确保股票数据按日期排序，这对于滚动窗口计算至关重要\n",
+    "    stock_df = stock_df.sort_values(by='调入日期').copy() # 使用 .copy() 避免 SettingWithCopyWarning\n",
+    "\n",
+    "    for period in periods:\n",
+    "        quantile_col_name = f'residual_quantile_{period}m'\n",
+    "        # 对残差列应用滚动计算\n",
+    "        # rank(pct=True) 计算百分位排名 (0-1之间)\n",
+    "        # iloc[-1] 获取当前（窗口中最后一个）元素的排名\n",
+    "        stock_df[quantile_col_name] = stock_df[residual_col].rolling(\n",
+    "            window=period, min_periods=1\n",
+    "        ).apply(lambda y: y.rank(pct=True).iloc[-1], raw=False)\n",
+    "    return stock_df\n",
+    "\n",
+    "def calculate_time_series_quantiles(df, residual_col, periods=[10, 20, 50]):\n",
+    "    \"\"\"\n",
+    "    计算个股时序残差分位数的主函数（并行版本）。\n",
+    "    将DataFrame按股票代码分组，并使用多核并行处理每个股票组。\n",
+    "    参数:\n",
+    "        df (pd.DataFrame): 包含残差数据（'stkcd', '调入日期', residual_col）的DataFrame。\n",
+    "        residual_col (str): 残差列的名称，例如 'residual_zscore' 或 'residual_zscore_adj'。\n",
+    "        periods (list): 需要计算分位数的历史周期列表（以月为单位）。\n",
+    "    返回:\n",
+    "        pd.DataFrame: 包含新增时序分位数列的完整DataFrame。\n",
+    "    \"\"\"\n",
+    "    if df.empty:\n",
+    "        print(\"输入DataFrame为空，无法计算时序残差分位数。\")\n",
+    "        return df\n",
+    "\n",
+    "    # 检查指定的残差列是否存在于DataFrame中\n",
+    "    if residual_col not in df.columns:\n",
+    "        print(f\"错误：DataFrame中未找到残差列 '{residual_col}'。请检查列名是否正确。\")\n",
+    "        return df\n",
+    "\n",
+    "    print(f\"\\n开始计算时序残差分位数（并行），针对列: '{residual_col}'...\")\n",
+    "\n",
+    "    # 获取CPU核心数量，用于并行计算\n",
+    "    num_cores = os.cpu_count()\n",
+    "    if num_cores is None:\n",
+    "        num_cores = 1 # 如果无法检测到核心数，则默认为单核\n",
+    "    print(f\"检测到 {num_cores} 个CPU核心，将使用所有核心进行并行计算。\")\n",
+    "\n",
+    "    # 将DataFrame按股票代码分组，并转换为列表，以便 joblib 进行并行处理\n",
+    "    grouped_dfs = [group for _, group in df.groupby('stkcd')]\n",
+    "\n",
+    "    # 使用 joblib.Parallel 进行并行计算\n",
+    "    # n_jobs=-1 表示使用所有可用的CPU核心\n",
+    "    results = Parallel(n_jobs=-1)(\n",
+    "        delayed(calculate_quantiles_for_single_stock)(stock_df, residual_col, periods)\n",
+    "        for stock_df in grouped_dfs\n",
+    "    )\n",
+    "\n",
+    "    # 将所有并行计算的结果合并回一个DataFrame\n",
+    "    # 重新排序以保持原始顺序，并重置索引，确保最终DataFrame的结构一致性\n",
+    "    df_quantiles_parallel = pd.concat(results).sort_values(by=['stkcd', '调入日期']).reset_index(drop=True)\n",
+    "\n",
+    "    print(\"时序残差分位数并行计算完成。\")\n",
+    "    return df_quantiles_parallel\n",
+    "\n",
+    "# =================================================================== #\n",
+    "#                       【4. 执行计算与保存结果】                     #\n",
+    "# =================================================================== #\n",
+    "\n",
+    "# 对 pbroe3.1 残差数据计算时序分位数\n",
+    "# 注意：这里将 residual_col 设置为 'residual_zscore'，以匹配文件中的列名\n",
+    "if not df_residuals_3_1.empty:\n",
+    "    df_residuals_3_1_with_quantiles = calculate_time_series_quantiles(\n",
+    "        df_residuals_3_1.copy(), residual_col='residual_zscore'\n",
+    "    )\n",
+    "    output_path_3_1 = OUTPUT_DIR / 'pbroe3.1Residuals_with_quantiles.csv'\n",
+    "    df_residuals_3_1_with_quantiles.to_csv(output_path_3_1, index=False)\n",
+    "    print(f\"\\npbroe3.1 残差分位数数据已保存至: {output_path_3_1}\")\n",
+    "else:\n",
+    "    print(\"pbroe3.1 残差数据加载失败，跳过时序分位数计算。\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80 + \"\\n\")\n",
+    "\n",
+    "# 对 pbroe4.1 残差数据计算时序分位数\n",
+    "# 注意：这里将 residual_col 设置为 'residual_zscore_adj'，以匹配文件中的列名\n",
+    "if not df_residuals_4_1.empty:\n",
+    "    df_residuals_4_1_with_quantiles = calculate_time_series_quantiles(\n",
+    "        df_residuals_4_1.copy(), residual_col='residual_zscore_adj'\n",
+    "    )\n",
+    "    output_path_4_1 = OUTPUT_DIR / 'pbroe4.1Residuals_with_quantiles.csv'\n",
+    "    df_residuals_4_1_with_quantiles.to_csv(output_path_4_1, index=False)\n",
+    "    print(f\"\\npbroe4.1 残差分位数数据已保存至: {output_path_4_1}\")\n",
+    "else:\n",
+    "    print(\"pbroe4.1 残差数据加载失败，跳过时序分位数计算。\")\n"
+   ],
+   "id": "f0d62feeac7768d4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "文件 'E:\\PBROE\\ch3\\pbroe3.1Residuals.csv' 加载成功，共 551604 条记录。\n",
+      "文件 'E:\\PBROE\\ch4\\pbroe4.1Residuals.csv' 加载成功，共 499191 条记录。\n",
+      "\n",
+      "开始计算时序残差分位数（并行），针对列: 'residual_zscore'...\n",
+      "检测到 192 个CPU核心，将使用所有核心进行并行计算。\n",
+      "时序残差分位数并行计算完成。\n",
+      "\n",
+      "pbroe3.1 残差分位数数据已保存至: pbroe3.1Residuals_with_quantiles.csv\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "\n",
+      "开始计算时序残差分位数（并行），针对列: 'residual_zscore_adj'...\n",
+      "检测到 192 个CPU核心，将使用所有核心进行并行计算。\n",
+      "时序残差分位数并行计算完成。\n",
+      "\n",
+      "pbroe4.1 残差分位数数据已保存至: pbroe4.1Residuals_with_quantiles.csv\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:py312] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-py312-py"
   },
   "language_info": {
    "codemirror_mode": {
