--- a/ch7pl/PBROEch7pl.ipynb
+++ b/ch7pl/PBROEch7pl.ipynb
@@ -9,6 +9,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# 数据导入\n",
     "import polars as pl\n",
     "import statsmodels.api as sm\n",
     "from pathlib import Path\n",
@@ -733,7 +734,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# 新ROEttm计算\n",
+    "# 新ROEttm波动率计算\n",
     "import polars as pl\n",
     "import os\n",
     "\n",
