第八章 错误

--- a/ch8/PBROEch8.ipynb
+++ b/ch8/PBROEch8.ipynb
@@ -12,8 +12,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-04T12:26:27.246267Z",
-     "start_time": "2025-08-04T12:26:24.148211Z"
+     "end_time": "2025-08-05T14:10:54.587275Z",
+     "start_time": "2025-08-05T14:10:51.062602Z"
     }
    },
    "cell_type": "code",
@@ -127,13 +127,13 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-04T15:51:59.168195Z",
-     "start_time": "2025-08-04T15:51:45.123597Z"
+     "end_time": "2025-08-05T14:11:18.986334Z",
+     "start_time": "2025-08-05T14:11:00.590399Z"
     }
    },
    "cell_type": "code",
@@ -606,13 +606,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-04T15:52:01.110814Z",
-     "start_time": "2025-08-04T15:51:59.384722Z"
+     "end_time": "2025-08-05T14:11:21.405048Z",
+     "start_time": "2025-08-05T14:11:19.042839Z"
     }
    },
    "cell_type": "code",
@@ -847,7 +847,215 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 16
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-05T14:12:29.061079Z",
+     "start_time": "2025-08-05T14:11:24.048355Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 更多残差分位数计算\n",
+    "import polars as pl\n",
+    "import numpy as np\n",
+    "import numba\n",
+    "from pathlib import Path\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# =================================================================== #\n",
+    "#                       【分位数计算模块】                            #\n",
+    "# =================================================================== #\n",
+    "\n",
+    "@numba.jit(nopython=True)\n",
+    "def rolling_rank_get_last_quantile(arr: np.ndarray) -> float:\n",
+    "    \"\"\"\n",
+    "    一个被 Numba JIT 编译的函数，用于高速计算滚动窗口中最后一个值的百分位排名。\n",
+    "    此版本经过增强，可以正确处理并跳过NaN值。\n",
+    "    \"\"\"\n",
+    "    # 过滤掉数组中的nan值\n",
+    "    valid_arr = arr[~np.isnan(arr)]\n",
+    "\n",
+    "    if len(valid_arr) == 0:\n",
+    "        return np.nan\n",
+    "\n",
+    "    # 获取有效值数组中的最后一个值\n",
+    "    last_val = valid_arr[-1]\n",
+    "\n",
+    "    # 如果过滤后只剩一个值，无法比较，返回中间值\n",
+    "    if len(valid_arr) <= 1:\n",
+    "        return 0.5\n",
+    "\n",
+    "    # 计算排名（采用 'average' 方法的逻辑）\n",
+    "    less_count = 0\n",
+    "    equal_count = 0\n",
+    "    for x in valid_arr:\n",
+    "        if x < last_val:\n",
+    "            less_count += 1\n",
+    "        elif x == last_val:\n",
+    "            equal_count += 1\n",
+    "\n",
+    "    # rank = (小于last_val的数量) + (等于last_val的数量 + 1) / 2\n",
+    "    rank = less_count + (equal_count + 1) / 2.0\n",
+    "\n",
+    "    # 返回百分位排名\n",
+    "    return rank / len(valid_arr)\n",
+    "\n",
+    "def rolling_rank_wrapper(s: pl.Series) -> float:\n",
+    "    \"\"\"\n",
+    "    包装器函数，将Polars Series转换为Numpy数组以供Numba函数使用。\n",
+    "    \"\"\"\n",
+    "    # 如果Series全为空，直接返回NaN，避免不必要的Numpy转换\n",
+    "    if s.is_null().all():\n",
+    "        return np.nan\n",
+    "    return rolling_rank_get_last_quantile(s.to_numpy())\n",
+    "\n",
+    "\n",
+    "# =================================================================== #\n",
+    "#                          【主执行流程】                             #\n",
+    "# =================================================================== #\n",
+    "\n",
+    "def calculate_and_save_quantile(file_path: Path, col_to_process: str, new_col_name: str, window_size: int = 10):\n",
+    "    \"\"\"\n",
+    "    独立执行滚动分位数计算的函数。\n",
+    "\n",
+    "    参数:\n",
+    "    file_path (Path): CSV文件的路径。\n",
+    "    col_to_process (str): 需要计算分位数的列名。\n",
+    "    new_col_name (str): 生成的新分位数排名列的名称。\n",
+    "    window_size (int): 滚动窗口的大小。\n",
+    "    \"\"\"\n",
+    "    print(f\"--- 开始为列 '{col_to_process}' 计算滚动分位数 ---\")\n",
+    "\n",
+    "    # --- 1. 加载数据 ---\n",
+    "    try:\n",
+    "        # 【已修复】在 schema_overrides 中明确指定目标列的数据类型为 Float64\n",
+    "        # 这可以防止 Polars 因数据中存在非数字值而将其误读为字符串\n",
+    "        schema = {\n",
+    "            \"stkcd\": pl.String,\n",
+    "            col_to_process: pl.Float64\n",
+    "        }\n",
+    "\n",
+    "        df = pl.read_csv(\n",
+    "            file_path,\n",
+    "            schema_overrides=schema,\n",
+    "            null_values=['', 'NA', 'NULL'] # 明确指定空值形式\n",
+    "        ).with_columns(\n",
+    "             pl.col('trdmnt').str.to_date('%Y-%m', strict=False)\n",
+    "        )\n",
+    "        print(f\"数据成功加载！共 {df.height} 行。\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"数据加载失败: {e}\")\n",
+    "        return\n",
+    "\n",
+    "    # --- 2. 核心计算 ---\n",
+    "    # a. 确保数据按正确顺序排列，这是滚动计算的前提\n",
+    "    df_sorted = df.sort(\"stkcd\", \"trdmnt\")\n",
+    "\n",
+    "    # b. 对指定列应用滚动计算\n",
+    "    # drop_nulls()确保只在有残差值的行上进行计算\n",
+    "    df_quantile = df_sorted.drop_nulls(subset=[col_to_process]).select(\n",
+    "        pl.col(\"stkcd\"),\n",
+    "        pl.col(\"trdmnt\"),\n",
+    "        pl.col(col_to_process)\n",
+    "            .rolling_map(\n",
+    "                function=rolling_rank_wrapper,\n",
+    "                window_size=window_size,\n",
+    "                min_samples=1, # 即使窗口未满也计算\n",
+    "            )\n",
+    "            .over(\"stkcd\")\n",
+    "            .alias(new_col_name)\n",
+    "    )\n",
+    "    print(\"分位数计算完成。\")\n",
+    "\n",
+    "    # --- 3. 合并与保存 ---\n",
+    "    # a. 如果新列名已存在于原文件中，先将其删除，避免重复\n",
+    "    if new_col_name in df.columns:\n",
+    "        df = df.drop(new_col_name)\n",
+    "\n",
+    "    # b. 将计算出的分位数结果左连接回原始数据\n",
+    "    df_final = df.join(df_quantile, on=['stkcd', 'trdmnt'], how='left')\n",
+    "\n",
+    "    # c. 格式化日期并覆盖保存\n",
+    "    df_final_formatted = df_final.with_columns(\n",
+    "        pl.col(\"trdmnt\").dt.strftime(\"%Y-%m\")\n",
+    "    )\n",
+    "\n",
+    "    df_final_formatted.write_csv(file_path)\n",
+    "    print(f\"计算完成，新列 '{new_col_name}' 已添加并覆盖保存至: {file_path}\")\n",
+    "\n",
+    "    # --- 4. 预览结果 ---\n",
+    "    print(\"\\n预览结果（部分关键列）:\")\n",
+    "    display(df_final.select([\n",
+    "        'stkcd', 'trdmnt', col_to_process, new_col_name\n",
+    "    ]).drop_nulls(subset=[new_col_name]).tail())\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # 定义文件和列名\n",
+    "    csv_file_path = Path(\"E:/PBROE/ch8/pbroe8.1_residuals_combined.csv\")\n",
+    "    target_column = \"residual_pb_roic_full\"\n",
+    "    new_quantile_column = \"residual_pb_roic_full_quantile\"\n",
+    "\n",
+    "    # 执行计算\n",
+    "    if csv_file_path.exists():\n",
+    "        calculate_and_save_quantile(\n",
+    "            file_path=csv_file_path,\n",
+    "            col_to_process=target_column,\n",
+    "            new_col_name=new_quantile_column,\n",
+    "            window_size=10\n",
+    "        )\n",
+    "    else:\n",
+    "        print(f\"错误：文件不存在，请检查路径 -> {csv_file_path}\")\n"
+   ],
+   "id": "72847e4afeada6a6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 开始为列 'residual_pb_roic_full' 计算滚动分位数 ---\n",
+      "数据成功加载！共 784086 行。\n",
+      "分位数计算完成。\n",
+      "计算完成，新列 'residual_pb_roic_full_quantile' 已添加并覆盖保存至: E:\\PBROE\\ch8\\pbroe8.1_residuals_combined.csv\n",
+      "\n",
+      "预览结果（部分关键列）:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "shape: (5, 4)\n",
+       "┌────────┬────────────┬───────────────────────┬────────────────────────────────┐\n",
+       "│ stkcd  ┆ trdmnt     ┆ residual_pb_roic_full ┆ residual_pb_roic_full_quantile │\n",
+       "│ ---    ┆ ---        ┆ ---                   ┆ ---                            │\n",
+       "│ str    ┆ date       ┆ f64                   ┆ f64                            │\n",
+       "╞════════╪════════════╪═══════════════════════╪════════════════════════════════╡\n",
+       "│ 689009 ┆ 2025-02-01 ┆ -1.811816             ┆ 0.7                            │\n",
+       "│ 689009 ┆ 2025-03-01 ┆ -1.663265             ┆ 0.9                            │\n",
+       "│ 689009 ┆ 2025-04-01 ┆ -1.638991             ┆ 0.9                            │\n",
+       "│ 689009 ┆ 2025-05-01 ┆ -2.006615             ┆ 0.4                            │\n",
+       "│ 689009 ┆ 2025-06-01 ┆ -2.224781             ┆ 0.2                            │\n",
+       "└────────┴────────────┴───────────────────────┴────────────────────────────────┘"
+      ],
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>stkcd</th><th>trdmnt</th><th>residual_pb_roic_full</th><th>residual_pb_roic_full_quantile</th></tr><tr><td>str</td><td>date</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;689009&quot;</td><td>2025-02-01</td><td>-1.811816</td><td>0.7</td></tr><tr><td>&quot;689009&quot;</td><td>2025-03-01</td><td>-1.663265</td><td>0.9</td></tr><tr><td>&quot;689009&quot;</td><td>2025-04-01</td><td>-1.638991</td><td>0.9</td></tr><tr><td>&quot;689009&quot;</td><td>2025-05-01</td><td>-2.006615</td><td>0.4</td></tr><tr><td>&quot;689009&quot;</td><td>2025-06-01</td><td>-2.224781</td><td>0.2</td></tr></tbody></table></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 26
   },
   {
    "metadata": {
@@ -858,6 +1066,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# 全市场回归\n",
     "import polars as pl\n",
     "from IPython.display import display\n",
     "from scipy.stats import t, f # 导入scipy用于计算p-value和F分布\n",
@@ -1257,8 +1466,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-04T15:53:13.459505Z",
-     "start_time": "2025-08-04T15:53:12.624611Z"
+     "end_time": "2025-08-05T14:43:13.640938Z",
+     "start_time": "2025-08-05T14:43:12.557803Z"
     }
    },
    "cell_type": "code",
@@ -1315,8 +1524,8 @@
     "    # 1. 创建分组\n",
     "    num_groups = config['NUM_GROUPS']\n",
     "    strategy_df = strategy_df.with_columns(\n",
-    "        pl.col('residual_pb_roic_full').qcut(num_groups, labels=[f\"G{i}\" for i in range(1, num_groups + 1)])\n",
-    "          .alias('residual_group') #residual_adj,residual_quantile,residual_pb_roic_full\n",
+    "        pl.col('residual_pb_roic_full_quantile').qcut(num_groups, labels=[f\"G{i}\" for i in range(1, num_groups + 1)])\n",
+    "          .alias('residual_group') # residual_adj,residual_quantile,residual_pb_roic_full,residual_pb_roic_full_quantile\n",
     "    ).drop_nulls('residual_group').rename({'trdmnt': 'date'})\n",
     "\n",
     "    # 2. 【【【【【核心修正】】】】】修复未来函数 (Lookahead Bias)\n",
@@ -1552,32 +1761,31 @@
       "所有分组的绩效指标已保存至: E:\\PBROE\\ch8\\backtest_results_polars\\pbroe8.1_backtest_polars_performance.csv\n",
       "\n",
       "--- pbroe8.1_backtest_polars 各分组绩效简报 ---\n",
-      "shape: (11, 9)\n",
+      "shape: (10, 9)\n",
       "┌───────────┬───────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬──────────┐\n",
       "│ group     ┆ 年化收益  ┆ 年化波动  ┆ 夏普比率  ┆ … ┆ 累计收益  ┆ 年化超额  ┆ 信息比率  ┆ 跟踪误差 │\n",
       "│ ---       ┆ 率        ┆ 率        ┆ ---       ┆   ┆ 率        ┆ 收益率    ┆ ---       ┆ ---      │\n",
       "│ str       ┆ ---       ┆ ---       ┆ f64       ┆   ┆ ---       ┆ ---       ┆ f64       ┆ f64      │\n",
       "│           ┆ f64       ┆ f64       ┆           ┆   ┆ f64       ┆ f64       ┆           ┆          │\n",
       "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
-      "│ Group 1   ┆ 0.170981  ┆ 0.254724  ┆ 0.553467  ┆ … ┆ 9.672087  ┆ 0.157126  ┆ 1.082755  ┆ 0.145117 │\n",
-      "│ Group 2   ┆ 0.141504  ┆ 0.259334  ┆ 0.429961  ┆ … ┆ 6.280476  ┆ 0.127648  ┆ 0.757297  ┆ 0.168557 │\n",
-      "│ Group 3   ┆ 0.127485  ┆ 0.265448  ┆ 0.367247  ┆ … ┆ 5.048693  ┆ 0.113629  ┆ 0.62718   ┆ 0.181175 │\n",
-      "│ Group 4   ┆ 0.105434  ┆ 0.268111  ┆ 0.281355  ┆ … ┆ 3.497742  ┆ 0.091579  ┆ 0.501089  ┆ 0.182759 │\n",
-      "│ Group 5   ┆ 0.098862  ┆ 0.275174  ┆ 0.250248  ┆ … ┆ 3.112874  ┆ 0.085006  ┆ 0.442241  ┆ 0.192217 │\n",
-      "│ …         ┆ …         ┆ …         ┆ …         ┆ … ┆ …         ┆ …         ┆ …         ┆ …        │\n",
-      "│ Group 7   ┆ 0.068989  ┆ 0.276946  ┆ 0.140781  ┆ … ┆ 1.720175  ┆ 0.055133  ┆ 0.282489  ┆ 0.195169 │\n",
-      "│ Group 8   ┆ 0.059247  ┆ 0.281937  ┆ 0.103736  ┆ … ┆ 1.371153  ┆ 0.045392  ┆ 0.219382  ┆ 0.206906 │\n",
-      "│ Group 9   ┆ 0.038965  ┆ 0.291485  ┆ 0.030757  ┆ … ┆ 0.774249  ┆ 0.02511   ┆ 0.11661   ┆ 0.215329 │\n",
-      "│ Group 10  ┆ -0.005884 ┆ 0.290371  ┆ -0.123581 ┆ … ┆ -0.084721 ┆ -0.01974  ┆ -0.090749 ┆ 0.217524 │\n",
+      "│ Group 1   ┆ 0.179367  ┆ 0.276698  ┆ 0.539821  ┆ … ┆ 10.877821 ┆ 0.165512  ┆ 0.873867  ┆ 0.189402 │\n",
+      "│ Group 2   ┆ 0.132442  ┆ 0.279935  ┆ 0.365948  ┆ … ┆ 5.460067  ┆ 0.118586  ┆ 0.624911  ┆ 0.189765 │\n",
+      "│ Group 3   ┆ 0.124601  ┆ 0.269183  ┆ 0.351439  ┆ … ┆ 4.820757  ┆ 0.110746  ┆ 0.620862  ┆ 0.178374 │\n",
+      "│ Group 4   ┆ 0.122489  ┆ 0.26804   ┆ 0.345057  ┆ … ┆ 4.658903  ┆ 0.108634  ┆ 0.581517  ┆ 0.186811 │\n",
+      "│ Group 5   ┆ 0.103628  ┆ 0.269764  ┆ 0.272934  ┆ … ┆ 3.388735  ┆ 0.089772  ┆ 0.490605  ┆ 0.182982 │\n",
+      "│ Group 6   ┆ 0.097308  ┆ 0.272034  ┆ 0.247424  ┆ … ┆ 3.026488  ┆ 0.083452  ┆ 0.456596  ┆ 0.18277  │\n",
+      "│ Group 7   ┆ 0.061858  ┆ 0.272171  ┆ 0.117052  ┆ … ┆ 1.460353  ┆ 0.048003  ┆ 0.253534  ┆ 0.189334 │\n",
+      "│ Group 8   ┆ 0.054441  ┆ 0.27077   ┆ 0.090266  ┆ … ┆ 1.214809  ┆ 0.040586  ┆ 0.213716  ┆ 0.189905 │\n",
+      "│ Group 9   ┆ -0.022422 ┆ 0.272987  ┆ -0.19203  ┆ … ┆ -0.288337 ┆ -0.036277 ┆ -0.179382 ┆ 0.202234 │\n",
       "│ 基准      ┆ 0.013856  ┆ 0.220508  ┆ -0.073215 ┆ … ┆ 0.229254  ┆ null      ┆ null      ┆ null     │\n",
       "│ (沪深300) ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
       "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘\n",
       "\n",
-      "--- 所有任务完成！总耗时: 0.80 秒 ---\n"
+      "--- 所有任务完成！总耗时: 1.05 秒 ---\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 45
   }
  ],
  "metadata": {
